--- a/notebook_example/experiment_mlflow.ipynb
+++ b/notebook_example/experiment_mlflow.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-06-06T12:33:18.162188Z",
@@ -41,7 +41,7 @@
    "source": [
     "# Búsqueda de mejor modelo e hiperparámetros\n",
     "\n",
-    "Dado nuestro dataset de Rain Australia, el cual ya pasó por el proceso de ETL y se encuentra en nuestro S3 bucket, vamos a realizar una búsqueda de cual seria el mejor modelo y que hiperparametros usar.\n",
+    "Dado nuestro dataset de Heart Disease, el cual ya pasó por el proceso de ETL y se encuentra en nuestro S3 bucket, vamos a realizar una búsqueda de cual seria el mejor modelo y que hiperparametros usar.\n",
     "\n",
     "La búsqueda de hiperparametros la haremos usando Optuna y el tracking será realizado mediante MLFlow.\n",
     "\n",
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-06-06T12:33:21.563179Z",
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-06-06T12:33:22.668794Z",
@@ -76,14 +76,13 @@
    },
    "outputs": [],
    "source": [
-    "dataset_name = \"rain_australia\"\n",
-    "\n",
     "# Cargamos los datos para realizar nuestro estudio.\n",
     "# OBS, no vamos a cargar los datos de testing, nada de Data leakage por aquí\n",
-    "X_train = wr.s3.read_csv(f\"s3://data/final/{dataset_name}_train_X.csv\")\n",
-    "y_train = wr.s3.read_csv(f\"s3://data/final/{dataset_name}_train_y.csv\")\n",
-    "X_test = wr.s3.read_csv(f\"s3://data/final/{dataset_name}_test_X.csv\")\n",
-    "y_test = wr.s3.read_csv(f\"s3://data/final/{dataset_name}_test_y.csv\")"
+    "X_train =  wr.s3.read_csv(\"s3://data/final/train/heart_X_train.csv\")\n",
+    "y_train =  wr.s3.read_csv(\"s3://data/final/train/heart_y_train.csv\")\n",
+    "\n",
+    "X_test =  wr.s3.read_csv(\"s3://data/final/test/heart_X_test.csv\")\n",
+    "y_test =  wr.s3.read_csv(\"s3://data/final/test/heart_y_test.csv\")"
    ]
   },
   {
@@ -103,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-06-06T12:33:29.152729Z",
@@ -117,8 +116,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-06T12:33:29.957355Z",
+     "start_time": "2024-06-06T12:33:29.776398Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Dado que estamos usando como tracking a MLFlow, mostrar los gráficos aquí no tiene sentido.\n",
@@ -135,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-06-06T12:33:31.839716Z",
@@ -145,16 +149,17 @@
    "outputs": [],
    "source": [
     "import datetime\n",
-    "\n",
     "import optuna\n",
+    "\n",
     "from mlflow.models import infer_signature\n",
     "from mlflow_aux import get_or_create_experiment\n",
+    "\n",
     "from optuna_aux import champion_callback, objective\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.metrics import f1_score\n",
-    "from sklearn.model_selection import cross_val_score\n",
+    "\n",
+    "from sklearn.svm import SVC \n",
     "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.metrics import f1_score\n",
     "\n",
     "# Optuna es un poco verboso, dejamos que solo nos muestre logs de errores\n",
     "optuna.logging.set_verbosity(optuna.logging.ERROR)"
@@ -171,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-06-06T12:33:35.350189Z",
@@ -189,7 +194,7 @@
    ],
    "source": [
     "# Creemos el experimento\n",
-    "experiment_id = get_or_create_experiment(\"Rain in Australia\")\n",
+    "experiment_id = get_or_create_experiment(\"Heart Disease\")\n",
     "print(experiment_id)\n",
     "\n",
     "run_name_parent = \"best_hyperparam_\"  + datetime.datetime.today().strftime('%Y/%m/%d-%H:%M:%S\"')"
@@ -204,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-06-06T12:33:57.072627Z",
@@ -216,21 +221,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Initial trial 0 achieved value: 0.5795886651298705\n",
-      "Trial 5 achieved value: 0.5796003800156124 with  0.0020% improvement\n"
+      "Initial trial 0 achieved value: 0.6672072072072072\n",
+      "Trial 3 achieved value: 0.6859614799356548 with  2.7340% improvement\n",
+      "Trial 5 achieved value: 0.755079365079365 with  9.1537% improvement\n",
+      "Trial 6 achieved value: 0.7712044817927171 with  2.0909% improvement\n",
+      "Trial 10 achieved value: 0.7970193205487324 with  3.2389% improvement\n",
+      "Trial 11 achieved value: 0.8138034578206744 with  2.0624% improvement\n",
+      "Trial 55 achieved value: 0.8194117647058823 with  0.6844% improvement\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\usuario\\.virtualenvs\\notebook_experiments-p1dBZEJI\\Lib\\site-packages\\_distutils_hack\\__init__.py:16: UserWarning: Distutils was imported before Setuptools, but importing Setuptools also replaces the `distutils` module in `sys.modules`. This may lead to undesirable behaviors or errors. To avoid these issues, avoid using distutils directly, ensure that setuptools is installed in the traditional way (e.g. not an editable install), and/or make sure that setuptools is always imported before distutils.\n",
-      "  warnings.warn(\n",
-      "c:\\Users\\usuario\\.virtualenvs\\notebook_experiments-p1dBZEJI\\Lib\\site-packages\\_distutils_hack\\__init__.py:31: UserWarning: Setuptools is replacing distutils. Support for replacing an already imported distutils is deprecated. In the future, this condition will fail. Register concerns at https://github.com/pypa/setuptools/issues/new?template=distutils-deprecation.yml\n",
-      "  warnings.warn(\n",
-      "Successfully registered model 'rain_australia_model_dev'.\n",
-      "2024/10/14 16:26:50 INFO mlflow.store.model_registry.abstract_store: Waiting up to 300 seconds for model version to finish creation. Model name: rain_australia_model_dev, version 1\n",
-      "Created version '1' of model 'rain_australia_model_dev'.\n"
+      "Successfully registered model 'heart_disease_model_dev'.\n",
+      "2024/06/06 09:46:02 INFO mlflow.store.model_registry.abstract_store: Waiting up to 300 seconds for model version to finish creation. Model name: heart_disease_model_dev, version 1\n",
+      "Created version '1' of model 'heart_disease_model_dev'.\n"
      ]
     }
    ],
@@ -243,7 +249,7 @@
     "    # está anidado al run padre.\n",
     "    # Notar la adición del `champion_callback` para controlar qué mensajes mostramos\n",
     "    # Para entender mejor esto ver la documentación de objective y champion_callback en optuna_aux\n",
-    "    study.optimize(lambda trial: objective(trial, X_train, y_train, experiment_id), n_trials=50, callbacks=[champion_callback])\n",
+    "    study.optimize(lambda trial: objective(trial, X_train, y_train, experiment_id), n_trials=250, callbacks=[champion_callback])\n",
     "\n",
     "    # Una vez que terminamos la búsqueda, guardamos los mejores parámetros en el run padre.\n",
     "    mlflow.log_params(study.best_params)\n",
@@ -251,7 +257,7 @@
     "\n",
     "    mlflow.set_tags(\n",
     "        tags={\n",
-    "            \"project\": \"Rain in Australia\",\n",
+    "            \"project\": \"Heart Disease\",\n",
     "            \"optimizer_engine\": \"optuna\",\n",
     "            \"model_family\": \"sklearn\",\n",
     "            \"feature_set_version\": 1,\n",
@@ -259,8 +265,13 @@
     "    )\n",
     "\n",
     "    # Una vez que terminamos la búsqueda, nos quedamos con el mejor modelo y lo entrenamos\n",
-    "    if study.best_params[\"classifier\"] == \"LogisticRegression\":\n",
-    "        model = LogisticRegression(C=study.best_params[\"lr_c\"])\n",
+    "    if study.best_params[\"classifier\"] == \"SVC_linear\":\n",
+    "        model = SVC(C=study.best_params[\"svc_c\"], kernel='linear', gamma='scale')\n",
+    "    elif study.best_params[\"classifier\"] == \"SVC_poly\":\n",
+    "        model = SVC(C=study.best_params[\"svc_c\"], kernel='poly', \n",
+    "                    gamma='scale', degree=study.best_params[\"svc_poly_degree\"])\n",
+    "    elif study.best_params[\"classifier\"] == \"SVC_rbf\":\n",
+    "        model = SVC(C=study.best_params[\"svc_c\"], kernel='rbf', gamma='scale')\n",
     "    elif study.best_params[\"classifier\"] == \"DecisionTreeClassifier\":\n",
     "        model = DecisionTreeClassifier(max_depth=study.best_params[\"tree_max_depth\"])\n",
     "    else:\n",
@@ -288,32 +299,12 @@
     "        artifact_path=artifact_path,\n",
     "        signature=signature,\n",
     "        serialization_format='cloudpickle',\n",
-    "        registered_model_name=\"rain_australia_model_dev\",\n",
+    "        registered_model_name=\"heart_disease_model_dev\",\n",
     "        metadata={\"model_data_version\": 1}\n",
     "    )\n",
     "\n",
     "    # Obtenemos la ubicación del modelo guardado en MLFlow\n",
     "    model_uri = mlflow.get_artifact_uri(artifact_path)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'classifier': 'LogisticRegression', 'lr_c': 4.7422009975921915}"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "study.best_params"
    ]
   },
   {
@@ -327,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-06-06T12:33:57.138907Z",
@@ -338,7 +329,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b4ea8bc0ddf4472eb5b9222a11be6c72",
+       "model_id": "ec035d4dc6ba4c7ca230d43500ed3c7a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -356,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-06-06T12:33:57.148986Z",
@@ -368,24 +359,27 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\usuario\\.virtualenvs\\notebook_experiments-p1dBZEJI\\Lib\\site-packages\\sklearn\\base.py:465: UserWarning: X does not have valid feature names, but LogisticRegression was fitted with feature names\n",
+      "/Users/facundolucianna/Investigacion/env/notebook_env_python3_8/lib/python3.8/site-packages/sklearn/base.py:465: UserWarning: X does not have valid feature names, but SVC was fitted with feature names\n",
       "  warnings.warn(\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "array([0], dtype=int64)"
+       "array([1])"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import numpy as np\n",
-    "test_data = X_train.loc[1, :].to_numpy()\n",
+    "test_data = [-1.0431146438366603, 0.6689936080056726, 0.5955141571109206, 1.4218278518511829, -0.3955054753168235,\n",
+    "             -0.195684619877533, 1.445528359737701, -0.8782783888787548, -0.4354941703556927, -0.6313862911472252,\n",
+    "             1.0752906583803283, -0.0987729596649589, 0.957427107756338, 1.1071614388213236, -0.2991215208080594,\n",
+    "             -0.5494422557947561, -0.362142984170074, 4.690415759823429, -0.2253029545296664, 1.1980376111153852]\n",
     "loaded.predict(np.array(test_data).reshape([1, -1]))"
    ]
   },
@@ -400,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-06-06T12:33:57.237830Z",
@@ -412,7 +406,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024/10/14 16:26:51 INFO mlflow.store.model_registry.abstract_store: Waiting up to 300 seconds for model version to finish creation. Model name: rain_australia_model_prod, version 1\n"
+      "2024/06/06 09:46:02 INFO mlflow.store.model_registry.abstract_store: Waiting up to 300 seconds for model version to finish creation. Model name: heart_disease_model_prod, version 1\n"
      ]
     }
    ],
@@ -420,8 +414,8 @@
     "from mlflow import MlflowClient\n",
     "\n",
     "client = MlflowClient()\n",
-    "name = \"rain_australia_model_prod\"\n",
-    "desc = \"This classifier detects if will rain tomorrow\"\n",
+    "name = \"heart_disease_model_prod\"\n",
+    "desc = \"This classifier detects if a person has a heart disease\"\n",
     "\n",
     "# Creamos el modelo productivo\n",
     "client.create_registered_model(name=name, description=desc)\n",
@@ -443,13 +437,25 @@
     "# proceso de servicio del modelo on-line.\n",
     "client.set_registered_model_alias(name, \"champion\", result.version)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "notebook_experiments-p1dBZEJI",
+   "display_name": "investigacion_p38",
    "language": "python",
-   "name": "python3"
+   "name": "investigacion_p38"
   },
   "language_info": {
    "codemirror_mode": {
@@ -461,7 +467,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.8.19"
   }
  },
  "nbformat": 4,
